# study-env-ai

./: .gitignore  Dockerfile  README.md  app.py  baseline_agent.py  environment.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py
