[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "study-env-ai"
version = "0.1.0"
dependencies = [
  "fastapi",
  "uvicorn",
  "numpy",
  "gymnasium",
  "torch",
  "openenv-core>=2.0.0",
  "openenv>=0.2.0",
]

[project.scripts]
server = "app:app"
